appId: pl.hasoft.example
---
- launchApp:
    clearState: true
- assertVisible: "Better Player Example"

# Setup HLS Data Source
- tapOn:
    id: "better_player_e2e_setup_hls"

# Wait for video area
- extendedWaitUntil:
    visible:
      id: "better_player_cupertino_controls_play_pause_button"
    timeout: 30000

# Play/Pause toggle
- tapOn:
    id: "better_player_cupertino_controls_play_pause_button"
- tapOn:
    id: "better_player_cupertino_controls_play_pause_button"

# Skip testing (15s forward, 15s back)
- tapOn:
    id: "better_player_cupertino_controls_skip_forward_button"
- tapOn:
    id: "better_player_cupertino_controls_skip_back_button"

# Mute/Unmute
- tapOn:
    id: "better_player_cupertino_controls_mute_button"
- tapOn:
    id: "better_player_cupertino_controls_mute_button"

# Speed Selection test (2.0x)
- tapOn:
    id: "better_player_cupertino_controls_more_button"
- extendedWaitUntil:
    visible:
      id: "better_player_overflow_menu_playback_speed"
    timeout: 5000
- tapOn:
    id: "better_player_overflow_menu_playback_speed"
- scrollUntilVisible:
    element:
      id: "better_player_overflow_menu_speed_2.0"
    direction: DOWN
- tapOn:
    id: "better_player_overflow_menu_speed_2.0"

# Quality Selection test (Verify Auto + 5 additional qualities)
- tapOn:
    id: "better_player_cupertino_controls_more_button"
- extendedWaitUntil:
    visible:
      id: "better_player_overflow_menu_quality"
    timeout: 5000
- tapOn:
    id: "better_player_overflow_menu_quality"
- extendedWaitUntil:
    visible:
      id: "better_player_overflow_menu_quality_auto"
    timeout: 5000
- assertVisible:
    id: "better_player_overflow_menu_quality_auto"
- extendedWaitUntil:
    visible:
      id: "better_player_overflow_menu_quality_1"
    timeout: 5000
- assertVisible:
    id: "better_player_overflow_menu_quality_1"
- assertVisible:
    id: "better_player_overflow_menu_quality_2"
- assertVisible:
    id: "better_player_overflow_menu_quality_3"
- assertVisible:
    id: "better_player_overflow_menu_quality_4"
- assertVisible:
    id: "better_player_overflow_menu_quality_5"
- tapOn:
    id: "better_player_overflow_menu_quality_1"
- tapOn:
    id: "better_player_cupertino_controls_more_button"
- extendedWaitUntil:
    visible:
      id: "better_player_overflow_menu_quality"
    timeout: 5000
- tapOn:
    id: "better_player_overflow_menu_quality"
- extendedWaitUntil:
    visible:
      id: "better_player_overflow_menu_quality_auto"
    timeout: 5000
- tapOn:
    id: "better_player_overflow_menu_quality_auto"

# Seeking (middle of the video)
- extendedWaitUntil:
    visible:
      id: "better_player_cupertino_progress_bar"
    timeout: 5000
- tapOn:
    id: "better_player_cupertino_progress_bar"

# Fullscreen test
- tapOn:
    id: "better_player_cupertino_controls_expand_button"
- extendedWaitUntil:
    visible:
      id: "better_player_cupertino_video_area"
    timeout: 10000
